<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Note Guardian</string>
    <string name="enter_note_title">Title</string>
    <string name="enter_note_description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add_new_note">Add New Note</string>
    <string name="textview">TextView</string>
    <string name="home">Home</string>
    <string name="note">Note</string>
    <string name="screenshot">ScreenShot</string>
    <string name="voice">Voice</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="general">General</string>
    <string name="notes">Notes</string>
    <string name="digilocker">DigiLocker</string>
    <string name="likenotes">like Note</string>
    <string name="features">Features</string>
    <string name="about_us">About Us</string>
    <string name="take_your_notes_with_you">Take Your Notes With You</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="snotes">Note Guardian</string>
    <string name="enter_date_of_birth" translatable="false">Enter Date Of Birth</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="welcome_to_snotes" translatable="false">Welcome To SNotes</string>
    <string name="let_s_get_started" translatable="false"><![CDATA[Let\'s Get Started ->]]></string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="photo">Photo</string>
    <string name="create_your_notes_anywhere">Create your notes anywhere</string>
    <string name="share">Share</string>
    <string name="add_image">Add Image</string>
    <string name="enable_fingerprint">Enable Fingerprint</string>
    <string name="set_password_for_your_app">Security</string>
    <string name="change_language">Select Language</string>
    <string name="hello" translatable="false">HELLO</string>
    <string name="togglebutton" translatable="false">ToggleButton</string>
    <string name="restart">Restart</string>
    <string name="Hi">Hi</string>
    <string name="tip_keep_your_fingerprint_protective_shield_onn_to_protect_your_notes">Tip :- Activate fingerprint protective shield to ensure no one, except you, can access your Notes.</string>
    <string name="tip_after_change_the_language_of_app_language_will_automatically_set_in_the_whole_app">Tip :- After change the language of app. Language will automatically set in the whole app</string>
    <string name="tip_after_change_your_language_please_restart_app">Tip:- After change your language please restart app</string>
    <string name="user">User</string>
    <string name="sign_up_to_your_account">Sign up to your account</string>
    <string name="save_changes">Save</string>
    <string name="hi_there">Hi There !!!</string>
    <string name="search_your_note">Search Your Note</string>
    <string name="update_note">Update Note</string>
    <string name="setting">Setting</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="user_profile">User Profile</string>
    <string name="if_you_change_your_device_theme_app_will_automatically_change_accordingly">1.If you change your device theme app will automatically change accordingly.</string>
    <string name="if_you_want_to_access_components_of_bottom_navigation_view_like_microphone_home_please_double_tap_on_them">2.You can link date and time of remainder note with google calendar.</string>
    <string name="to_delete_your_note_just_swipe_them">3.To delete your note just swipe them.</string>
    <string name="you_can_swipe_notes_with_each_other">4.You can swipe notes with each other.</string>
    <string name="to_make_your_app_secure_please_enable_fingerprint_authentication">5.To make your app secure please enable fingerprint authentication.</string>
    <string name="you_can_change_the_language_of_app">6.You can change the language of app.</string>
    <string name="you_can_use_microphone_to_add_description_of_note">7.You can use microphone to add description of note.</string>
    <string name="developer_contact">Developer Contact</string>
    <string name="version">Version 5.0.1</string>
    <string name="hi_there_this_is_an_amazing_note_taking_application_which_will_help_users_to_create_their_notes">This is an amazing note taking application which will help users to create their notes.</string>
    <string name="for_any_query_and_suggestions_do_message_me">For any query and suggestions do message me.</string>
    <string name="contact_us">Contact Me</string>
    <string name="on_screen_rotation_you_can_scroll_down_to_see_all_components">8.On screen rotation you can scroll down to see all components.</string>
    <string name="privacy_policy">privacy Policy</string>
    <string name="rate_us">Rate Us</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="share_us">Share Us</string>
    <string name="marathi">Marathi</string>
    <string name="bengali">Bengali</string>
    <string name="punjabi">Punjabi</string>
    <string name="tamil">Tamil</string>
    <string name="telugu">Telugu</string>
    <string name="malayalam">malayalam</string>
    <string name="urdu">Urdu</string>
    <string name="after_language_change_app_will_automatically_restart">After language change app will automatically restart</string>
    <string name="add_remainder">Remainders</string>
    <string name="pin_unpin">Pin/Unpin</string>
    <string name="it_s_time_to_plan_your_day">It\'s time to plan your tomorrow</string>
    <string name="making_a_good_habit_of_planing_your_day_so_that_you_will_not_miss_any_task">Making a good habit of planing your day so that you will not miss any task</string>
    <string name="add_new_task">Add New Task</string>
    <string name="todo_list">Todo List</string>
    <string name="action_settings">About</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="tv_title">Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="enter_todo_hint">e.g., Eat less at dinner</string>
    <string name="today_calendar_button">Today</string>
    <string name="due_date_text">Due Date</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="this_wknd">This Weekend</string>
    <string name="next_week">Next Week</string>
    <string name="radio_high">High </string>
    <string name="radio_med">Medium </string>
    <string name="radio_low">Low </string>
    <string name="colors">colors</string>
    <string name="add_to_google_calendar">Add to Google Calendar</string>
    <string name="add_date_and_time_to_google_calendar">Add Date and Time to Google Calendar</string>
    <string name="want_to_delete_this_note">Want to delete this note permanently ?</string>
    <string name="alert">Alert !!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="for_future_task_you_can_set_remainders_so_that_you_will_not_forget_your_important_task">9.For future task you can set remainders so that you will not forget your important task.</string>
    <string name="you_can_create_a_checklist_for_your_daily_task">10.You can create a checklist for your daily task .</string>
    <string name="you_can_change_the_background_color_of_note">11.You can change the background color of note .</string>
    <string name="you_can_mark_note_as_like_or_dislike">12.You can mark note as like or dislike .</string>
    <string name="all_fields_are_required">All fields are required</string>
    <string name="dislike_note">dislike note</string>
    <string name="task_is_completed">Task is completed</string>
    <string name="please_add_task">Please add task</string>
    <string name="please_select_date">Please select date</string>
    <string name="app_update_successfully">App Update Successfully</string>
    <string name="no_biometric_features_available_on_this_device">No biometric features available on this device.</string>
    <string name="biometric_features_are_currently_unavailable">Biometric features are currently unavailable.</string>
    <string name="enroll_a_fingerprint_to_make_secure_your_app">Enroll a fingerprint to make secure your app</string>
    <string name="please_assign_a_fingerprint_to_keep_secure_app">Please assign a fingerprint to keep secure app</string>
    <string name="please_add_remainder_date">Please add remainder date and time</string>
    <string name="sort_notes">Sort Notes</string>
    <string name="sort_notes_by_date">By Date</string>
    <string name="sort_notes_by_priority">By Priority</string>
    <string name="sort_your_notes">Sort Your Notes</string>
    <string name="by_favorite">By Favorite</string>
    <string name="back_button">back button</string>
    <string name="delete_all_notes">Delete All Notes</string>
    <string name="recycle_notes">Recycle Notes</string>
    <string name="drawing">Drawing</string>
    <string name="_5">5</string>
    <string name="eraser">eraser</string>
    <string name="undo">undo</string>
    <string name="color_picker">color picker</string>
    <string name="note_image">note image</string>
    <string name="drawing_note">drawing note</string>
    <string name="Update">Update</string>
    <string name="add_user_image">Add User Image</string>
    <string name="let_s_begin">Let\'s Begin</string>
    <string name="hi">"Hi "</string>
    <string name="pinnedNote">Pinned Note</string>
    <string name="unpinnedNote">UnPinned Note</string>
    <string name="empty">Empty</string>
    <string name="unempty" />
    <string name="delete_Image">Delete Image</string>
    <string name="Are_you_sure_to_delete_image">Are you sure to delete image</string>
    <string name="assamese">Assamese</string>
    <string name="turkish">Turkish</string>
    <string name="russian">Russian</string>
    <string name="japanese">Japanese</string>


</resources>