<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/item1"
     android:title="@string/english"/>
    <item android:id="@+id/item2"
     android:title="@string/hindi"/>
    <item android:id="@+id/item3"
        android:title="@string/marathi">
    </item>
    <item android:id="@+id/item4"
        android:title="@string/bengali">
    </item>
    <item android:id="@+id/item5"
        android:title="@string/punjabi">
    </item>
    <item android:id="@+id/item6"
        android:title="@string/tamil">
    </item>
    <item android:id="@+id/item7"
        android:title="@string/telugu">
    </item>
    <item android:id="@+id/item8"
        android:title="@string/malayalam">
    </item>
    <item android:id="@+id/item9"
        android:title="@string/assamese">
    </item>
    <item android:id="@+id/item10"
        android:title="@string/turkish">
    </item>
    <item android:id="@+id/item11"
        android:title="@string/russian">
    </item>
    <item android:id="@+id/item12"
        android:title="@string/japanese">
    </item>
    <item android:id="@+id/item13"
        android:title="@string/urdu">
    </item>
</menu>