<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/colorPicker"
        android:icon="@drawable/ic_baseline_color_lens_24"
        android:title="@string/colors"
        app:showAsAction="always">

    </item>

    <item
        android:id="@+id/voice"
        android:icon="@drawable/ic_baseline_mic_24"
        android:title="@string/voice"
        app:showAsAction="always"/>
    <item
        android:id="@+id/photoTaken"
        android:icon="@drawable/ic_baseline_add_a_photo_24"
        android:title="@string/photo"
        app:showAsAction="always"/>


    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share"
        app:showAsAction="always"/>
</menu>