<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/background_color">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/snotesicon"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome_to_snotes"
        android:textColor="@color/headerTextColor"
        android:textStyle="bold"
        style="@android:style/TextAppearance.DeviceDefault.Medium"/>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/version"
        android:textColor="@color/text_color"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hi_there"
        android:padding="10dp"
        android:textColor="@color/text_color"
        style="@android:style/TextAppearance.DeviceDefault.Medium"/>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hi_there_this_is_an_amazing_note_taking_application_which_will_help_users_to_create_their_notes"
        android:padding="10dp"
        android:textColor="@color/text_color"
        style="@android:style/TextAppearance.DeviceDefault.Medium"/>
</LinearLayout>