<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context="my.app.snotes.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/round_image"
            android:clipToOutline="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/snotesicon"
            tools:targetApi="s" />

        <TextView
            android:id="@+id/textView11"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:text="@string/welcome_to_snotes"
            android:textColor="@color/headerTextColor"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView13"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:padding="8dp"
            android:textSize="@dimen/_15sdp"
            android:text="@string/hi_there"
            android:textColor="@color/headerTextColor" />
        <TextView
            android:id="@+id/textView14"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="@dimen/_15sdp"
            android:padding="8dp"
            android:text="@string/hi_there_this_is_an_amazing_note_taking_application_which_will_help_users_to_create_their_notes"
            android:textColor="@color/headerTextColor" />

        <TextView
            android:id="@+id/textView2"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:text="@string/for_any_query_and_suggestions_do_message_me"
            android:textColor="@color/headerTextColor"
            android:textSize="@dimen/_15sdp" />

        <Button
            android:id="@+id/contactUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/restartBtn"
            android:text="@string/contact_us"
            android:textColor="@color/headerTextColor" />
    </LinearLayout>
</ScrollView>