<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/noteBackgroundColor"
    android:orientation="vertical"
    android:id="@+id/remainderLayout"
    tools:context="com.alphacreators.noteguardian.REMAINDERNOTES.Remainders">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/RBackImage"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/back_button">

        </ImageView>

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/dislike"
            android:id="@+id/RFavouriteNote"
            android:clickable="true"
            android:contentDescription="@string/by_favorite">
        </ImageView>

        <ImageView
            android:id="@+id/RPinNote"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toStartOf="@id/RFavouriteNote"
            android:clickable="true"
            android:contentDescription="@string/pin_unpin"
            android:src="@drawable/pin">
        </ImageView>

        <ImageView
            android:id="@+id/RDrawingNote"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toStartOf="@id/RPinNote"
            android:clickable="true"
            android:contentDescription="@string/drawing"
            android:src="@drawable/color_palette">
        </ImageView>

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_40sdp"
        android:scrollbars="vertical"
        android:id="@+id/RScrollView"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="">
            <ImageView
                android:id="@+id/remainderImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:scaleType="center">
            </ImageView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/RDrawImage"
                android:layout_margin="10dp"
                android:scaleType="fitXY">
            </ImageView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/remainderTitle"
                android:padding="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:autoSizeTextType="uniform"
                android:ems="10"
                android:layout_margin="10dp"
                android:hint="@string/enter_note_title"
                android:textColorHint="@color/hintTextColor"
                android:background="@color/noteBackgroundColor"
                android:inputType="textMultiLine"
                android:textColor="@color/headerTextColor"
                android:textSize="@dimen/_16sdp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_margin="10dp">

                <RadioGroup
                    android:id="@+id/RNoteRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio_group_background"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/RNoteRadioButtonHigh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/holo_red_dark"
                        android:paddingEnd="10dp"
                        android:text="@string/radio_high"
                        android:textColor="#B2EBF2" />

                    <RadioButton
                        android:id="@+id/RNoteRadioButtonMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_med"
                        android:paddingEnd="10dp"
                        android:background="#FFFF00"/>

                    <RadioButton
                        android:id="@+id/RNoteRadioButtonLow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#0000FF"
                        android:paddingEnd="10dp"
                        android:text="@string/radio_low"
                        android:textColor="#B0BEC5" />
                </RadioGroup>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/remainderDescription"
                android:padding="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:layout_margin="10dp"
                android:gravity="start|top"
                android:textSize="@dimen/_16sdp"
                android:hint="@string/enter_note_description"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:textColorHint="@color/hintTextColor"
                android:background="@color/noteBackgroundColor"
                android:textColor="@color/headerTextColor" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/remainder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_margin="@dimen/_15sdp"
                android:padding="@dimen/_5sdp"
                android:gravity="center"
                android:background="@color/noteBackgroundColor"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/hintTextColor"
                android:hint="@string/add_remainder"
                app:drawableStartCompat="@drawable/ic_baseline_calendar_month_24">

            </com.google.android.material.textview.MaterialTextView>


        </LinearLayout>
    </ScrollView>
    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomRemainder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:clickable="true"
        app:fabCradleMargin="10dp"
        app:fabCradleRoundedCornerRadius="20dp"
        app:fabCradleVerticalOffset="10dp"
        app:hideOnScroll="true"
        android:backgroundTint="@color/background_color">
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/remainderBottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:background="@color/background_color"
            app:itemIconTint="@color/iconbackgroundColor"
            android:clickable="true"
            app:menu="@menu/bottom_navigation" />
    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/remainderSaveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_done_all_24"
        app:layout_anchor="@id/bottomRemainder"
        app:tint="@color/white"
        tools:ignore="SpeakableTextPresentCheck">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>
</androidx.coordinatorlayout.widget.CoordinatorLayout>






